--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -13,7 +13,7 @@ on:
     types: published
   push:
     branches:
-      - master
+      - openwrt-19.07
     paths:
       - '.config'
 #  schedule:
