--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -54,7 +54,13 @@ jobs:
 
     - name: Clone source code
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-      
+
+    - name: Update feeds
+      run: cd openwrt && ./scripts/feeds update -a
+
+    - name: Install feeds
+      run: cd openwrt && ./scripts/feeds install -a
+
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
@@ -62,17 +68,20 @@ jobs:
         chmod +x $DIY_SH
         cd openwrt
         ../$DIY_SH
-   
-    - name: Update feeds
+        
+    - name: delete tmp
+      run: cd openwrt && rm -rf tmp
+        
+    - name: Restart Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
-    - name: Install feeds
+    - name: Restart Install feeds
       run: cd openwrt && ./scripts/feeds install -a
-     
+
     - name: SSH connection to Actions
       uses: P3TERX/debugger-action@master
       if: env.SSH_ACTIONS == 'true'
-      
+
     - name: Download package
       id: package
       run: |
