--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -29,7 +29,7 @@ env:
   SSH_ACTIONS: true
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-#  TZ: Asia/Shanghai
+  TZ: Asia/Shanghai
 
 jobs:
   build:
