--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -53,7 +53,7 @@ jobs:
         curl -fsSL https://raw.githubusercontent.com/P3TERX/dotfiles/master/.bashrc >> ~/.bashrc
 
     - name: Clone source code
-      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+      run: git clone $REPO_URL -b $REPO_BRANCH openwrt
      
     - name: 自定义插件
       run: |
@@ -99,7 +99,7 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         sed -i 's|^TARGET_|# TARGET_|g; s|# TARGET_DEVICES += phicomm-k3|TARGET_DEVICES += phicomm-k3|' target/linux/bcm53xx/image/Makefile
-        make -j1 V=99 2>&1 ; echo -e '\a'
+        make -j$(nproc) || make -j1 V=s 2>&1 ; echo -e '\a'
         echo "::set-output name=status::success"
 
     - name: Upload bin directory
