--- a/.github/workflows/build-openwrt-k3.yml
+++ b/.github/workflows/build-openwrt-k3.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build OpenWrt
+name: K3-Build OpenWrt
 
 on:
   release:
