--- a/.github/workflows/build-openwrt-rly.yml
+++ b/.github/workflows/build-openwrt-rly.yml
@@ -98,7 +98,7 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 V=s 2>&1 ; echo -e '\a'
+        make -j1 V=s 2>&1 ; echo -e '\a'
         echo "::set-output name=status::success"
 
     - name: Upload bin directory
