--- a/k3.config
+++ b/k3.config
@@ -2348,7 +2348,7 @@ CONFIG_PACKAGE_uci=y
 CONFIG_PACKAGE_urandom-seed=y
 CONFIG_PACKAGE_urngd=y
 CONFIG_PACKAGE_usign=y
-# CONFIG_PACKAGE_wireless-tools is not set
+CONFIG_PACKAGE_wireless-tools=y
 # CONFIG_PACKAGE_zram-swap is not set
 
 #
@@ -2958,6 +2958,7 @@ CONFIG_PACKAGE_kmod-macvlan=y
 # CONFIG_PACKAGE_kmod-switch-rtl8367b is not set
 # CONFIG_PACKAGE_kmod-tg3 is not set
 # CONFIG_PACKAGE_kmod-tulip is not set
+# CONFIG_PACKAGE_kmod-usb-net-rtl8152 is not set
 # CONFIG_PACKAGE_kmod-via-rhine is not set
 # CONFIG_PACKAGE_kmod-via-velocity is not set
 # CONFIG_PACKAGE_kmod-vmxnet3 is not set
@@ -3255,6 +3256,7 @@ CONFIG_PACKAGE_kmod-cfg80211=y
 # CONFIG_PACKAGE_kmod-rtl8192se is not set
 # CONFIG_PACKAGE_kmod-rtl8812au-ct is not set
 # CONFIG_PACKAGE_kmod-rtl8821ae is not set
+# CONFIG_PACKAGE_kmod-rtl8821cu is not set
 # CONFIG_PACKAGE_kmod-rtl88x2bu is not set
 # CONFIG_PACKAGE_kmod-rtl8xxxu is not set
 # CONFIG_PACKAGE_kmod-wl12xx is not set
@@ -5375,6 +5377,7 @@ CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_luci-app-frps is not set
 # CONFIG_PACKAGE_luci-app-fwknopd is not set
+# CONFIG_PACKAGE_luci-app-gost is not set
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-haproxy-tcp=y
 # CONFIG_PACKAGE_luci-app-hd-idle is not set
@@ -5446,8 +5449,6 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
 # CONFIG_PACKAGE_luci-app-polipo is not set
 # CONFIG_PACKAGE_luci-app-pppoe-relay is not set
-# CONFIG_PACKAGE_luci-app-pptp-server is not set
-# CONFIG_PACKAGE_luci-app-pptp-vpnserver-manyusers is not set
 # CONFIG_PACKAGE_luci-app-privoxy is not set
 CONFIG_PACKAGE_luci-app-qbittorrent=y
 # CONFIG_PACKAGE_luci-app-qos is not set
@@ -5487,7 +5488,6 @@ CONFIG_PACKAGE_luci-app-ssocks=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus-Jo is not set
 CONFIG_PACKAGE_luci-app-ssr-plus-Jo_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-ssr-plus-Jo_INCLUDE_V2ray=y
@@ -5527,7 +5527,6 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-udp2raw is not set
 # CONFIG_PACKAGE_luci-app-udpxy is not set
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
-# CONFIG_PACKAGE_luci-app-unblockmusic-go is not set
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic-go is not set
 CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini=y
 # CONFIG_PACKAGE_luci-app-unbound is not set
@@ -5542,27 +5541,10 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 # CONFIG_PACKAGE_luci-app-vpnbypass is not set
 CONFIG_PACKAGE_luci-app-vsftpd=y
 # CONFIG_PACKAGE_luci-app-vssr is not set
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Server is not set
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Shadowsocks_Server=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Socks=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Shadowsocks_Socks=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ipt2socks=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_dnscrypt_proxy=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_dnsforwarder=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ChinaDNS=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_haproxy=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_privoxy=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_simple-obfs=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_simple-obfs-server=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_udpspeeder=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_udp2raw-tunnel=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_GoQuiet-client=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_GoQuiet-server=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_v2ray-plugin=y
 CONFIG_PACKAGE_luci-app-vssr-Jo=y
 CONFIG_PACKAGE_luci-app-vssr-Jo_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-vssr-Jo_INCLUDE_V2ray=y
@@ -5627,7 +5609,6 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
 # CONFIG_PACKAGE_luci-theme-atmaterial1 is not set
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-# CONFIG_PACKAGE_luci-theme-bootstrap-mc is not set
 # CONFIG_PACKAGE_luci-theme-bootstrap-mod is not set
 # CONFIG_PACKAGE_luci-theme-darkmatter is not set
 # CONFIG_PACKAGE_luci-theme-leo is not set
@@ -5898,6 +5879,7 @@ CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-nlbwmon-vi is not set
 CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-tw is not set
+CONFIG_PACKAGE_luci-i18n-nps-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-oaf-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-opkg-bg is not set
 # CONFIG_PACKAGE_luci-i18n-opkg-ca is not set
@@ -6776,6 +6758,8 @@ CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_haproxy=y
 # CONFIG_PACKAGE_halog is not set
 # CONFIG_PACKAGE_haproxy-nossl is not set
+CONFIG_PACKAGE_kcptun-client=y
+# CONFIG_PACKAGE_kcptun-server is not set
 # CONFIG_PACKAGE_lighttpd is not set
 # CONFIG_PACKAGE_nginx is not set
 # CONFIG_PACKAGE_nginx-all-module is not set
@@ -6889,7 +6873,6 @@ CONFIG_PACKAGE_ChinaDNS=y
 # CONFIG_PACKAGE_ShadowVPN is not set
 # CONFIG_PACKAGE_UnblockNeteaseMusic-53xx is not set
 # CONFIG_PACKAGE_UnblockNeteaseMusic-Go is not set
-# CONFIG_PACKAGE_UnblockNeteaseMusicGo is not set
 # CONFIG_PACKAGE_acme is not set
 # CONFIG_PACKAGE_acme-dnsapi is not set
 # CONFIG_PACKAGE_adblock is not set
@@ -6945,6 +6928,7 @@ CONFIG_PACKAGE_frpc=y
 # CONFIG_PACKAGE_gargoyle-firewall-util is not set
 # CONFIG_PACKAGE_geth is not set
 # CONFIG_PACKAGE_gnunet is not set
+# CONFIG_PACKAGE_gost is not set
 CONFIG_PACKAGE_gq-client=y
 CONFIG_PACKAGE_gq-server=y
 # CONFIG_PACKAGE_gre is not set
@@ -7000,8 +6984,6 @@ CONFIG_PACKAGE_iw=y
 # CONFIG_PACKAGE_iw-full is not set
 # CONFIG_PACKAGE_jool is not set
 # CONFIG_PACKAGE_jool-tools is not set
-CONFIG_PACKAGE_kcptun-client=y
-# CONFIG_PACKAGE_kcptun-server is not set
 # CONFIG_PACKAGE_keepalived is not set
 # CONFIG_PACKAGE_knxd is not set
 # CONFIG_PACKAGE_kplex is not set
@@ -7020,6 +7002,7 @@ CONFIG_PACKAGE_libipset=y
 # CONFIG_PACKAGE_mac-telnet-server is not set
 # CONFIG_PACKAGE_map is not set
 # CONFIG_PACKAGE_memcached is not set
+# CONFIG_PACKAGE_microsocks is not set
 # CONFIG_PACKAGE_mii-tool is not set
 # CONFIG_PACKAGE_mikrotik-btest is not set
 # CONFIG_PACKAGE_mini_snmpd is not set
@@ -7701,7 +7684,6 @@ CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_iwinfo=y
 CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_jshn=y
-# CONFIG_PACKAGE_k3screenctrl is not set
 # CONFIG_PACKAGE_kdump is not set
 # CONFIG_PACKAGE_kexec is not set
 # CONFIG_PACKAGE_kexec-tools is not set
