--- a/.github/workflows/build-openwrt-rly.yml
+++ b/.github/workflows/build-openwrt-rly.yml
@@ -18,15 +18,15 @@ on:
       - 'rly.config'
 #  schedule:
 #    - cron: 0 8 * * 5
-#  watch:
-#    types: started
+  watch:
+    types: started
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt.git
   REPO_BRANCH: openwrt-19.07
   CONFIG_FILE: rly.config
   DIY_SH: diy.sh
-  SSH_ACTIONS: true
+  SSH_ACTIONS: false
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
