--- a/.github/workflows/build-openwrt-rly.yml
+++ b/.github/workflows/build-openwrt-rly.yml
@@ -27,7 +27,7 @@ env:
   CONFIG_FILE: rly.config
   DIY_SH: rly-diy.sh
   DIY_NODE_SH: rly-diy-node.sh
-  SSH_ACTIONS: true
+  SSH_ACTIONS: false
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
