--- a/rly.config
+++ b/rly.config
@@ -2297,8 +2297,8 @@ CONFIG_PACKAGE_kmod-slhc=y
 # CONFIG_PACKAGE_kmod-slip is not set
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 # CONFIG_PACKAGE_kmod-tcp-bbr-bbrplus is not set
-# CONFIG_PACKAGE_kmod-tcp-bbr-mod is not set
-# CONFIG_PACKAGE_kmod-tcp-bbr-nanqinlang is not set
+CONFIG_PACKAGE_kmod-tcp-bbr-mod=y
+CONFIG_PACKAGE_kmod-tcp-bbr-nanqinlang=y
 # CONFIG_PACKAGE_kmod-tcp-bbr-tsunami is not set
 # CONFIG_PACKAGE_kmod-trelay is not set
 CONFIG_PACKAGE_kmod-tun=y
@@ -6657,7 +6657,7 @@ CONFIG_PACKAGE_iputils-arping=y
 # CONFIG_PACKAGE_iputils-tftpd is not set
 # CONFIG_PACKAGE_iputils-tracepath is not set
 # CONFIG_PACKAGE_iputils-tracepath6 is not set
-# CONFIG_PACKAGE_iputils-traceroute6 is not set
+CONFIG_PACKAGE_iputils-traceroute6=y
 # CONFIG_PACKAGE_ipvsadm is not set
 CONFIG_PACKAGE_iw=y
 # CONFIG_PACKAGE_iw-full is not set
