--- a/.github/workflows/build-openwrt-rly.yml
+++ b/.github/workflows/build-openwrt-rly.yml
@@ -24,7 +24,7 @@ on:
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt
-  REPO_BRANCH: master
+  REPO_BRANCH: openwrt-19.07
   CONFIG_FILE: rly.config
   DIY_SH: rly-diy.sh
   DIY_NODE_SH: rly-diy-node.sh
